# Hand-detection-model

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  makefile
Core/: Image.cpp  Image.h
Core/IO/: Reader.cpp  Reader.h
src/core/: Image.cpp  Image.h  Pixel.c++  Pixel.h
